--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,3 +1,6 @@
 <h1>Welcome, <%= @user.name %> </h1>
 <p>This is your profile!</p>
 <a href ="/users/logout">Log Out</a>
+
+<!-- links to decks to play new games  -->
+<!-- <a href="/games/:deck_id/new">Play this game!</a> -->
