--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,16 +1,14 @@
-<h1>Welcome, <%= @user.name %> </h1>
-<p>This is your profile!</p>
-<a href ="/users/logout">Log Out</a>
+<h1 id="welcome">Welcome, <%= @user.name %> </h1>
 
 <div id="deck-display">
   <h3>Play A Deck</h3>
   <% @decks.each do |deck| %>
-    <p><%= deck.name %></p>
+    <a href="/games/new/<%=deck.id%>"><%= deck.name %></a>
     <p><%= deck.description %></p>
-    <a href="games/new/<%=deck.id%>">Play This Deck</a>
   <% end %>
 </div>
 
+<div class="footer"><a href ="/users/logout">Log Out</a></div>
 
 <!-- links to decks to play new games  -->
 <!-- <a href="/games/:deck_id/new">Play this game!</a> -->
