--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
   -->
   <link rel="stylesheet" href="/css/normalize.css">
+
+  <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah|Homemade+Apple' rel='stylesheet' type='text/css'>
   <!--
     application.css is where you put your styles
   -->
