--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   background-color: #192B33;
 }
 
@@ -17,7 +17,6 @@ th {
   margin-top: 150px;
   text-align: center;
   padding: 25px;
-/*  background-color: #FFFFFF;*/
 }
 
 #main-welcome-box h1{
@@ -71,3 +70,4 @@ th {
 #deck-display h1{
   font-family: 'Homemade Apple', cursive;
 }
+*/
