--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,10 @@
 <div class="container">
   <div id="main-welcome-box">
     <h1>tweety</h1>
-    <a id="new-user-button" href="/users/new"><div class="main-button">Sign Up</div></a>
-    <a id="login-user-button" href="/users/login"><div class="main-button">Log In</div></a>
-    <div id="drop-down-box"></id>
+    <nav>
+      <a id="new-user-button" href="/users/new"><div class="main-button">Sign Up</div></a>
+      <a id="login-user-button" href="/users/login"><div class="main-button">Log In</div></a>
+      <div id="drop-down-box"></id>
   </div>
 
 </div>
