--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -1,23 +1,42 @@
-<div id="deck-display">
-  <h1>Guess this tweet!</h1>
+<nav class="#ffa726 orange lighten-1">
+  <div>
+    <a href="/users/<%= @user.id %>/profile" class="brand-logo thin"><%= @user.name %></a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href ="/games/results">End game</a></li>
+      <li><a href ="/users/logout">Log Out</a></li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container">
+  <h4 class="thin">Guess this tweet!</h4>
   <div id="display-question-tweet">
-    <h4><em>"<%= @question.tweet_content %>"</em></h4>
+    <h2><em>"<%= @question.tweet_content %>"</em></h2>
   </div>
 
 
   <div id="options">
     <% @question.tweet_options.each do |option| %>
-      <a class="guess-option-box" href="/questions/guess/<%= option.id %>"><article>
-        <h4><%= option.name %></h4>
-        <p>@<%= option.twitter_handle %></p>
-      </article></a>
+
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="guess-option-box card grey lighten-1">
+          <div class="card-content white-text">
+            <span class="card-title">
+              <a href="/questions/guess/<%= option.id %>"><%= option.name %></a>
+            </span>
+            <p><%= option.twitter_handle %></p>
+          </div>
+        </div>
+      </div>
+    </div>
     <% end %>
   </div>
 
   <div class="evaluation_box"></div>
 
   <div id="next_question">
-  <a href="/games/<%=session[:game_id]%>/next_question">Next Question</a>
+    <a class="waves-effect waves-light btn" href="/games/<%=session[:game_id]%>/next_question">Next Question</a>
   </div>
 </div>
 
