--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,21 @@
-<div class="container">
-  <div id="main-welcome-box">
-    <h1>tweety</h1>
-    <nav>
-      <a id="new-user-button" href="/users/new"><div class="main-button">Sign Up</div></a>
-      <a id="login-user-button" href="/users/login"><div class="main-button">Log In</div></a>
-      <div id="drop-down-box"></id>
-  </div>
 
-</div>
+  <body class="#ffa726 orange lighten-1">
+    <div class="center-align" >
+      <div id="main-welcome-box">
+        <h1 class="white-text thin">welcome to tweety</h1>
+        <h5 class="white-text thin"><i>a fun little twitter game</i></h5><br>
+
+        <a href="/users/new" class="waves-effect waves-light btn amber lighten-2" class="card-panel hoverable">sign up</a>
+        <a href="/users/login" class="waves-effect waves-light btn amber lighten-2" class="card-panel hoverable">log in</a>
+
+        <div id="drop-down-box"></id>
+      </div>
+    </div>
+  </body>
+
+<footer class="footer-copyright grey-text text-lighten-2 thin">
+  <div class="container">
+    <p><i>Tweety</i> was created during week 6 of <a href="https://devbootcamp.com" class="grey-text text-lighten-4">Dev Bootcamp</a> by <a href="https://github.com/mgalicer" class="grey-text text-lighten-4">Mari</a> and <a href="https://github.com/shawndav" class="grey-text text-lighten-4">Shawn.</a>
+  </div>
+</footer>
+
