--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,14 +1,35 @@
-<h1 id="welcome">Welcome, <%= @user.name %> </h1>
+<nav class="#ffa726 orange lighten-1">
+  <div>
+    <a href="/users/<%= @user.id %>/profile" class="brand-logo thin">  Welcome, <%= @user.name %></a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href ="/users/logout">Log Out</a></li>
+    </ul>
+  </div>
+</nav>
 
-<div id="deck-display">
-  <h3>Play A Deck</h3>
-  <% @decks.each do |deck| %>
-    <a href="/games/new/<%=deck.id%>"><%= deck.name %></a>
-    <p><%= deck.description %></p>
-  <% end %>
+<div class="container">
+  <h4><i>Choose a deck to play!</i></h4>
+
+    <% @decks.each do |deck| %>
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card grey lighten-1">
+            <div class="card-content white-text">
+              <span class="card-title">
+                <%= deck.name %>
+              </span>
+              <p><%= deck.description %></p>
+            </div>
+            <div class="card-action">
+              <a href="/games/new/<%=deck.id%>">play</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+
+
 </div>
-
-<div class="footer"><a href ="/users/logout">Log Out</a></div>
 
 <!-- links to decks to play new games  -->
 <!-- <a href="/games/:deck_id/new">Play this game!</a> -->
