delete materialize js files

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,7 @@
         <h1 class="white-text thin">welcome to tweety</h1>
         <h5 class="white-text thin"><i>a fun little twitter game</i></h5><br>
 
-        <a href="/users/new" class="waves-effect waves-light btn amber lighten-2" class="card-panel hoverable">sign up</a>
+        <a href="/users/new" class="waves-effect waves-light btn amber lighten-2 card-panel hoverable" id="new-user-button">sign up</a>
         <a href="/users/login" class="waves-effect waves-light btn amber lighten-2" class="card-panel hoverable">log in</a>
 
         <div id="drop-down-box"></id>
