add guest user to seed file and create ability for users to sign in as guest

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,6 +7,7 @@
 
         <a href="/users/new" class="waves-effect waves-light btn amber lighten-2" class="card-panel hoverable">sign up</a>
         <a href="/users/login" class="waves-effect waves-light btn amber lighten-2" class="card-panel hoverable">log in</a>
+        <a href="/users/login/guest" class="waves-effect waves-light btn amber lighten-2" class="card-panel hoverable">play as guest</a>
 
         <div id="drop-down-box"></id>
       </div>
