--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,7 +6,7 @@
         <h5 class="white-text thin"><i>a fun little twitter game</i></h5><br>
 
         <a href="/users/new" class="waves-effect waves-light btn amber lighten-2 card-panel hoverable" id="new-user-button">sign up</a>
-        <a href="/users/login" class="waves-effect waves-light btn amber lighten-2" class="card-panel hoverable">log in</a>
+        <a href="/users/login" class="waves-effect waves-light btn amber lighten-2 card-panel hoverable" id="login-user-button">log in</a>
 
         <div id="drop-down-box"></id>
       </div>
