add github repo link to main page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -16,7 +16,7 @@
 
 <footer class="footer-copyright grey-text text-lighten-2 thin">
   <div class="container">
-    <p><i>Tweety</i> was created during week 6 of <a href="https://devbootcamp.com" class="grey-text text-lighten-4">Dev Bootcamp</a> by <a href="https://github.com/mgalicer" class="grey-text text-lighten-4">Mari</a> and <a href="https://github.com/shawndav" class="grey-text text-lighten-4">Shawn.</a>
+    <p><i>Tweety</i> was created during week 6 of <a href="https://devbootcamp.com" class="grey-text text-lighten-4">Dev Bootcamp</a> by <a href="https://github.com/mgalicer" class="grey-text text-lighten-4">Mari</a> and <a href="https://github.com/shawndav" class="grey-text text-lighten-4">Shawn.</a>  <a href="https://github.com/shawndav/tweety"><span id="source_code_link" class="fontawesome-github"></span></p>
   </div>
 </footer>
 
