--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,6 +11,8 @@
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
   <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah|Homemade+Apple' rel='stylesheet' type='text/css'>
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--
     application.css is where you put your styles
   -->
