--- a/public/css/application.css
+++ b/public/css/application.css
@@ -72,6 +72,36 @@ th {
 }
 */
 
+/*.card{
+  width:250px;
+  text-align:center;
+  display:inline-block;
+  height:125px;
+}*/
+
+
+.card-title p{
+  font-size:20px;
+  line-height:1.3em;
+}
+
+.container{
+  text-align: center;
+}
+
+#result-display{
+  margin:100px auto;
+  width:50%;
+  text-align:center;
+  padding:15px;
+}
+
+#deck-option{
+  height:125px;
+}
+
+
+
 @import url(http://weloveiconfonts.com/api/?family=fontawesome);
 
 
