limit questions per game to a max of 20

--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -8,7 +8,7 @@
 </nav>
 
 <div class="container">
-  <h4 >Choose a deck to play!</h4>
+  <h4>Pick a category!</h4>
     <div class="row">
     <% @decks.each do |deck| %>
 
